syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option go_package = "generated-go/v1";

service VCSProviderService {
  rpc GetVCSProvider(GetVCSProviderRequest) returns (VCSProvider) {
    option (google.api.http) = {get: "/v1/{name=vcsProviders/*}"};
    option (google.api.method_signature) = "name";
  }

  rpc ListVCSProviders(ListVCSProvidersRequest) returns (ListVCSProvidersResponse) {
    option (google.api.http) = {get: "/v1/vcsProviders"};
    option (google.api.method_signature) = "";
  }

  rpc CreateVCSProvider(CreateVCSProviderRequest) returns (VCSProvider) {
    option (google.api.http) = {
      post: "/v1/vcsProviders"
      body: "vcs_provider"
    };
    option (google.api.method_signature) = "";
  }

  rpc UpdateVCSProvider(UpdateVCSProviderRequest) returns (VCSProvider) {
    option (google.api.http) = {
      patch: "/v1/{vcs_provider.name=vcsProviders/*}"
      body: "vcs_provider"
    };
    option (google.api.method_signature) = "vcs_provider,update_mask";
  }

  rpc DeleteVCSProvider(DeleteVCSProviderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/{name=vcsProviders/*}"};
  }

  rpc SearchVCSProviderProjects(SearchVCSProviderProjectsRequest) returns (SearchVCSProviderProjectsResponse) {
    option (google.api.http) = {
      post: "/v1/{name=vcsProviders/*}:searchProjects"
      body: "*"
    };
  }

  rpc ListProjectGitOpsInfo(ListProjectGitOpsInfoRequest) returns (ListProjectGitOpsInfoResponse) {
    option (google.api.http) = {get: "/v1/{name=vcsProviders/*}/projects"};
  }
}

message CreateVCSProviderRequest {
  VCSProvider vcs_provider = 1 [(google.api.field_behavior) = REQUIRED];

  // The ID to use for the VCS provider, which will become the final component of
  // the VCS provider's name.
  //
  // This value should be 4-63 characters, and valid characters
  // are /[a-z][0-9]-/.
  string vcs_provider_id = 2;
}

message GetVCSProviderRequest {
  // The name of the vcs provider to retrieve.
  // Format: vcsProviders/{vcsProvider}
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message ListVCSProvidersRequest {
  // Not used. The maximum number of vcs provider to return. The service may return fewer than this value.
  // If unspecified, at most 100 vcs provider will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 1;

  // Not used. A page token, received from a previous `ListVCSProviders` call.
  // Provide this to retrieve the subsequent page.
  string page_token = 2;
}

message ListVCSProvidersResponse {
  // The list of vcs providers.
  repeated VCSProvider vcs_providers = 1;

  // Not used. A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

message UpdateVCSProviderRequest {
  VCSProvider vcs_provider = 1 [(google.api.field_behavior) = REQUIRED];

  // The list of fields to be updated.
  google.protobuf.FieldMask update_mask = 2 [(google.api.field_behavior) = REQUIRED];
}

message DeleteVCSProviderRequest {
  // The name of the vcs provider to delete.
  // Format: vcsProviders/{vcsProvider}
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message SearchVCSProviderProjectsRequest {
  // The name of the vcs provider to retrieve the vcs provider repositories.
  // Format: vcsProviders/{vcsProvider}
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message SearchVCSProviderProjectsResponse {
  message Project {
    // The id of the project in vcs provider.
    string id = 1;
    // The title of the project in vcs provider.
    string title = 2;
    // The fullpath of the project in vcs provider.
    string fullpath = 3;
    // Web url of the project in vcs provider.
    string web_url = 4;
  }
  // The list of project in vcs provider.
  repeated Project projects = 1;
}

message ListProjectGitOpsInfoRequest {
  // The name of the vcs provider to retrieve the linked projects.
  // Format: vcsProviders/{vcsProvider}
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message ListProjectGitOpsInfoResponse {
  // The binding between vcs provider and project.
  repeated ProjectGitOpsInfo project_gitops_info = 1;
}

message VCSProvider {
  // The name of the vcs provider.
  // Format: vcsProviders/{vcsProvider}
  string name = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The title of the vcs provider. It is used to display in the UI. Specified by the client.
  string title = 2 [(google.api.field_behavior) = REQUIRED];

  enum Type {
    TYPE_UNSPECIFIED = 0;
    // GitHub type. Using for GitHub community edition(ce).
    GITHUB = 1;
    // GitLab type. Using for GitLab community edition(ce) and enterprise edition(ee).
    GITLAB = 2;
    // BitBucket type. Using for BitBucket cloud or BitBucket server.
    BITBUCKET = 3;
    // Azure DevOps. Using for Azure DevOps GitOps workflow.
    AZURE_DEVOPS = 4;
  }

  Type type = 3 [(google.api.field_behavior) = REQUIRED];

  // The url of the vcs provider. Specified by the client.
  // For example: github.com, gitlab.com, gitlab.bytebase.com.
  string url = 4 [(google.api.field_behavior) = REQUIRED];

  // The access token of the vcs provider.
  string access_token = 5 [(google.api.field_behavior) = INPUT_ONLY];
}

message ProjectGitOpsInfo {
  // The name of the linked repository, generated by the server, and also is the unique identifier.
  // Format: projects/{project}/gitOpsInfo
  string name = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The name of the VCS.
  string vcs = 2;

  // The title of the repository. For axample: sample.
  string title = 3;

  // The full_path of the repository. For example: bytebase/sample.
  string full_path = 4;

  // The web url of the repository. For axample: https://gitlab.bytebase.com/bytebase/sample.
  string web_url = 5;

  // The branch Bytebase listens to for changes. For example: main.
  string branch_filter = 6;

  // The root directory where Bytebase observes the file change. If empty, then it observes the entire repository.
  string base_directory = 7;

  // The reposition external id in target VCS.
  string external_id = 11;

  // The webhook endpoint ID of the repository.
  string webhook_endpoint_id = 13 [(google.api.field_behavior) = OUTPUT_ONLY];
}
